--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,10 @@
 
     <string name="contact_info_name">%s \n </string>
     <string name="contact_info_number">%s</string>
-
+    <string name="home_title">Home</string>
+    <string name="moments_title">Search</string>
+    <string name="notifications_title">Notification</string>
+    <string name="messages_title">List</string>
 
 
 </resources>
