--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,5 +61,5 @@
     <string name="menu_map">Map</string>
     <string name="menu_room">Room</string>
 
-
+    <string name="title_task_number">Task #%x</string>
 </resources>
