--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
     <string name="menu_room">Room</string>
 
     <string name="title_task_number">Task #%x</string>
+    <string name="contact_info">%s \n %s</string>
 </resources>
